@@ -38,6 +38,7 @@ from objc._locking import *
 from objc._context import *
 from objc._properties import *
 from objc._lazyimport import *
+import objc._callable_docstr
 
 import objc._pycoder as _pycoder
 
